# JTX

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
JTX/Core/: Camera.h  Core.h  Lights.h  Primitive.cpp  Primitive.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
JTX/Util/: Mat4.cpp  Util.h  Vec3.h
JTX/core/: camera.h  camera.hpp  core.h  core.hpp  lights.h  lights.hpp  primitive.cpp  primitive.h  primitive.hpp  renderer.cpp  renderer.h  renderer.hpp  scene.h  scene.hpp  shader.cpp  shader.hpp
JTX/util/: color.h  color.hpp  mat4.cpp  mat4.h  mat4.hpp  util.h  util.hpp  vec2.hpp  vec3.h  vec3.hpp  vec4.hpp
Tests/: CMakeLists.txt  TestCore.cpp  TestRenderer.cpp  TestUtil.cpp  test_core.cpp  test_renderer.cpp  test_util.cpp
include/: camera.h  engine.h  lights.h  model.h  primitive.h  renderer.h  scene.h  util.h
lib/jtxlib/: CMakeLists.txt
lib/jtxlib/src/: jtxlib.hpp
lib/jtxlib/src/jtxlib/: simd.hpp
lib/jtxlib/src/jtxlib/math/: constants.hpp  math.hpp  numerical.hpp  quaternion.hpp  spherical.cpp  spherical.hpp  vec3.hpp  vecmath.hpp  vector.hpp
lib/jtxlib/src/jtxlib/std/: std.hpp
lib/jtxlib/src/jtxlib/util/: rand.hpp  taggedptr.hpp
lib/jtxlib/tests/: test_math.cpp  test_ray.cpp  test_tptr.cpp  test_vec4.cpp
src/: CMakeLists.txt  camera.c  color.hpp  engine.c  jtxlib.hpp  lights.c  main.cpp  model.c  primitive.c  renderer.c  scene.c  spectrum.cpp  spectrum.hpp  util.c
src/jtxlib/: containers.hpp  math.hpp  std.hpp  util.hpp
src/jtxlib/math/: bounds.hpp  constants.hpp  mat4.cpp  mat4.hpp  math.hpp  numerical.hpp  quaternion.hpp  ray.hpp  spherical.cpp  spherical.hpp  transform.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vecmath.hpp
src/jtxlib/simd/: avxfloat.hpp
src/jtxlib/std/: memory_resource.cpp  memory_resource.hpp  std.hpp
src/jtxlib/util/: assert.hpp  rand.hpp  taggedptr.hpp
src/util/: assert.hpp  bounds.hpp  matrix.cpp  matrix.hpp  ray.hpp  spherical.hpp  transform.hpp  vec2.hpp  vec4.hpp
test/: camera_test.c  engine_test.c  lights_test.c  model_test.c  prim_test.c  renderer_test.c  scene_test.c  util_test.c  vec3_test.c
tests/: CMakeLists.txt  tconstants.h  test_bb.cpp  test_bbox.cpp  test_buffer.cpp  test_core.cpp  test_mat4.cpp  test_matrix.cpp  test_memrsrc.cpp  test_quat.cpp  test_ray.cpp  test_renderer.cpp  test_spherical.cpp  test_tptr.cpp  test_util.cpp  test_vec2.cpp  test_vec3.cpp  test_vec4.cpp
tests/primitives/: README.md
v2/: CMakeLists.txt  vcpkg.json
v2/src/util/: Mat4.cpp  Mat4.hpp  assert.h  assert.hpp  bounds.hpp  constants.hpp  math.hpp  matrix.hpp  numerical.h  numerical.hpp  spherical.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vecmath.hpp
v2/tests/: CMakeLists.txt  README.md  test_bounding_box.cpp  test_matrix.cpp  test_ray.cpp  test_spherical.cpp  test_vec2.cpp  test_vec3.cpp  test_vec4.cpp  test_vector.cpp
